--- a/20210610/20210610.ipynb
+++ b/20210610/20210610.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
     "                else:\n",
     "                    return False\n",
     "            else:\n",
-    "                if self.heap_array[left_idx] < self.heap_array[idx]:\n",
+    "                if self.heap_array[left_idx] < self.heap_array[right_idx]:\n",
     "                    return True\n",
     "                else:\n",
     "                    return False\n",
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
        "[None, 20, 10, 15, 5, 4, 8]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
        "20"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,16 +296,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[None, 8, 10, 15, 5, 4]"
+       "[None, 15, 10, 8, 5, 4]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
