--- a/20210613/20210613.ipynb
+++ b/20210613/20210613.ipynb
@@ -490,6 +490,89 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 9. Merge sort"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def split(data):\n",
+    "    if len(data) <= 1:\n",
+    "        return data\n",
+    "    center = int(len(data) / 2)\n",
+    "    left = split(data[:center])\n",
+    "    right = split(data[center:])\n",
+    "    return merge(left, right)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def merge(left, right):\n",
+    "    merged = list()\n",
+    "    left_p, right_p = 0, 0\n",
+    "    \n",
+    "    # Case 1: 양쪽 다 남아있는 경우\n",
+    "    while left_p < len(left) and right_p < len(right):\n",
+    "        if left[left_p] > right[right_p]:\n",
+    "            merged.append(right[right_p])\n",
+    "            right_p += 1\n",
+    "        else:\n",
+    "            merged.append(left[left_p])\n",
+    "            left_p += 1\n",
+    "    \n",
+    "    # Case 2: left만 남아있는 경우\n",
+    "    while left_p < len(left):\n",
+    "        merged.append(left[left_p])\n",
+    "        left_p += 1\n",
+    "    \n",
+    "    # Case 3: right만 남아있는 경우\n",
+    "    while right_p < len(right):\n",
+    "        merged.append(right[right_p])\n",
+    "        right_p +=1\n",
+    "    \n",
+    "    return merged"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_data = [49, 97, 53, 5, 33, 65, 62, 51]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 33, 49, 51, 53, 62, 65, 97]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "split(list_data)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
