--- a/Algorithms/1. Bubble sort/1. Bubble sort.md
+++ b/Algorithms/1. Bubble sort/1. Bubble sort.md
@@ -18,7 +18,6 @@
 
 ## 1.2 알고리즘 분석
 
-* 반복문이 두 개이므로, O($n^2$)
+* 반복문이 두 개이므로, O($$n^2$$)
 * 최악의 경우(매 로직마다 계속해서 자리 변경이 계속 이루어지는 경우)  <font size=5em>$\frac { n * (n - 1)}{ 2 }$</font>
-
 * 완전 정렬이 되어 있는 상태라면 최선은 O(n) (반복문을 한 번 돌면 되기 때문에)
