--- a/Algorithms/9. Breadth First Search(BFS)/9. Breadth First Search(BFS) - exercise.ipynb
+++ b/Algorithms/9. Breadth First Search(BFS)/9. Breadth First Search(BFS) - exercise.ipynb
@@ -1,11 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"https://www.fun-coding.org/00_Images/BFSDFS.png\" width=700>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 위 그래프를 기반으로 dictionary를 이용해 그래프를 표현\n",
     "my_graph = dict()\n",
     "\n",
     "my_graph['A'] = ['B', 'C']\n",
