--- a/Baekjoon_judge/2798번.ipynb
+++ b/Baekjoon_judge/2798번.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "https://www.acmicpc.net/problem/2798"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 1. My Solution"
    ]
   },
